Fixed overflowing content

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,20 @@ ul.nav {
     padding-right: 20px;
 }
 
+section {
+    display: flex;
+    min-height: 100vh;
+    width: 100%;
+    justify-content: center;
+    align-items: top;
+    flex-direction: column;
+    position: relative;
+}
+
+.port {
+
+}
+
 #main-nav {
     opacity: 0.95;
 }
@@ -59,50 +73,27 @@ ul.nav {
     /*vertical-align: middle;*/
 }
 
-.textbox {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translateY(-50%);
-    transform: translateX(-50%);
-    width: 80%;
-}
-
-.portfoliobox {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translateY(-50%);
-    transform: translateX(-50%);
-    width: 90%;
-}
 
 #about-me {
-    position: relative;
-    height: 100vh;
     background-color: #9099A2;
 }
 
 #portfolio {
-    position: relative;
-    height: 100vh;
+
     background-color:  #D5D5D5;
 }
 
 #portfolio h1 {
     padding-top: 5%;
-        margin-top: 0;
+    margin-top: 0;
 }
 
 
 #contact {
-    position: relative;
-    height: 100vh;
     background-color: #9099A2;
 }
 
 #main-footer {
-    position: relative;
     height: 15vh;
     background-color: #96858F;
 }
